// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders Text with {0} as its children correctly 1`] = `
<span
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: inherit;
        display: inline;
        font-family: inherit;
        font-size: inherit;
        font-weight: inherit;
      }
>
  0
</span>
`;

exports[`Text renders default Text correctly 1`] = `
<span
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: inherit;
        display: inline;
        font-family: inherit;
        font-size: inherit;
        font-weight: inherit;
      }
>
  I'm default text
</span>
`;
